@@ -1,3 +1,8 @@
+2004-10-08 Bart Hakvoort  <gparted@users.sf.net>
+
+	* src/Dialog_Base_Partition.cc,
+	  src/Dialog_Partition_Resize_Move.cc: fixed some resizing-issues with reiserfs.
+
 2004-10-07 Bart Hakvoort  <gparted@users.sf.net>
 
 	* src/Dialog_Base_Partition.cc,
